feat: Update branding, UI styling, and internationalization, including a new Dutch language block and renaming "Multiverse" to "Ecosystem".

--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
         <div class="container">
             <div class="glass-panel rounded-pill px-3 px-md-4 py-2 d-flex align-items-center justify-content-between">
                 <div class="d-flex align-items-center gap-2">
-                    <img src="images/logo.png" alt="Ticket Masala" height="28" class="d-block">
-                    <span class="fw-bold text-dark h6 h5-md mb-0" style="font-family: 'Rajdhani'">Ticket Masala</span>
+                    <img src="images/logo.png" alt="Ticket Masala" height="42" class="d-block">
+                    <span class="fw-bold text-dark h5 mb-0" style="font-family: 'Rajdhani'; font-size: 1.5rem;">Ticket
+                        Masala</span>
                 </div>
 
                 <!-- Desktop Navigation -->
@@ -116,10 +117,10 @@
                             data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fas fa-globe me-1"></i> <span id="current-lang">EN</span>
                         </button>
-                        <ul class="dropdown-menu dropdown-menu-end shadow-sm">
-                            <li><a class="dropdown-item small" href="#" onclick="setLang('en')">English</a></li>
-                            <li><a class="dropdown-item small" href="#" onclick="setLang('nl')">Nederlands</a></li>
-                            <li><a class="dropdown-item small" href="#" onclick="setLang('fr')">Français</a></li>
+                        <ul class="dropdown-menu dropdown-menu-end shadow-sm border-0 glass-panel">
+                            <li><button class="dropdown-item small" onclick="setLang('en')">English</button></li>
+                            <li><button class="dropdown-item small" onclick="setLang('nl')">Nederlands</button></li>
+                            <li><button class="dropdown-item small" onclick="setLang('fr')">Français</button></li>
                         </ul>
                     </div>
                     <a href="https://ticket-masala-demos.fly.dev/" class="btn btn-sm btn-glass rounded-pill px-3">
@@ -168,10 +169,10 @@
                         data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fas fa-globe me-2"></i> <span id="current-lang-mobile">EN</span>
                     </button>
-                    <ul class="dropdown-menu w-100 shadow-sm">
-                        <li><a class="dropdown-item" href="#" onclick="setLang('en')">English</a></li>
-                        <li><a class="dropdown-item" href="#" onclick="setLang('nl')">Nederlands</a></li>
-                        <li><a class="dropdown-item" href="#" onclick="setLang('fr')">Français</a></li>
+                    <ul class="dropdown-menu w-100 shadow-sm border-0 glass-panel">
+                        <li><button class="dropdown-item" onclick="setLang('en')">English</button></li>
+                        <li><button class="dropdown-item" onclick="setLang('nl')">Nederlands</button></li>
+                        <li><button class="dropdown-item" onclick="setLang('fr')">Français</button></li>
                     </ul>
                 </div>
                 <a href="https://github.com/yourusername/ticket-masala" class="btn btn-glass rounded-pill px-3">
@@ -188,7 +189,7 @@
                 <div class="col-12 col-lg-7 text-center text-lg-start mb-4 mb-lg-0 reveal">
                     <div
                         class="d-inline-flex align-items-center gap-2 px-3 py-2 rounded-pill glass-panel mb-4 interactive-glow">
-                        <span class="badge bg-success rounded-pill px-2">v2.4</span>
+                        <span class="badge bg-success rounded-pill px-2">v3.0</span>
                         <span class="small text-secondary fw-semibold">
                             <span data-i18n="hero_intro">Announcing</span> <span class="text-primary">GERDA
                                 AI</span> Autonomous Agents
@@ -213,7 +214,7 @@
                         class="d-flex flex-column flex-sm-row gap-3 justify-content-center justify-content-lg-start mb-4">
                         <a href="https://ticket-masala-demos.fly.dev/"
                             class="btn btn-primary btn-glow btn-lg px-4 px-lg-5 py-3">
-                            <i class="fas fa-rocket me-2"></i> Explore Multiverse
+                            <i class="fas fa-rocket me-2"></i> Explore Ecosystem
                         </a>
                         <a href="#features" class="btn btn-glass btn-lg px-4 py-3">
                             <i class="fas fa-info-circle me-2"></i> How it works
@@ -398,10 +399,10 @@
                             </div>
                             <div>
                                 <h3 class="h4 fw-bold text-dark mb-2" data-i18n="solution_multitenant_title">
-                                    The Anderson Multiverse</h3>
+                                    The Enterprise Hub</h3>
                                 <p class="text-secondary mb-0" data-i18n="solution_multitenant_desc">
-                                    Explore 4 live demos: Desgoffe (Gov), Whitman (Rail), Liberty (Tech), and Hennessey
-                                    (Grants). All powered by one engine.
+                                    Experience adaptive multi-tenancy. Four distinct industries—Government,
+                                    Infrastructure, Tech, and Research—running on a single instance.
                                 </p>
                             </div>
                         </div>
@@ -412,12 +413,13 @@
                             </li>
                             <li class="mb-4 d-flex align-items-center gap-2"><i
                                     class="fas fa-check-circle text-success"></i><span
-                                    data-i18n="solution_multitenant_point2">Custom themes & domain logic via YAML</span>
+                                    data-i18n="solution_multitenant_point2">Desgoffe, Whitman, Liberty &
+                                    Hennessey</span>
                             </li>
                             <li>
                                 <a href="https://ticket-masala-demos.fly.dev/"
                                     class="btn btn-primary btn-glow px-4 py-2"
-                                    data-i18n="solution_multitenant_point3">Launch the Multiverse</a>
+                                    data-i18n="solution_multitenant_point3">Launch the Ecosystem</a>
                             </li>
                         </ul>
                     </div>
@@ -636,7 +638,7 @@
         <div class="container">
             <div class="text-center mb-5 reveal">
                 <h2 class="display-5 fw-bold text-dark mb-3"><span data-i18n="voices_title">Voices of the</span> <span
-                        class="text-gradient-primary" data-i18n="voices_title_2">Multiverse</span></h2>
+                        class="text-gradient-primary" data-i18n="voices_title_2">Ecosystem</span></h2>
                 <p class="text-secondary lead mx-auto" style="max-width: 600px;" data-i18n="voices_subtitle">
                     Trusted by leaders across every dimension.
                 </p>
@@ -721,8 +723,37 @@
         </div>
     </footer>
 
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
     <!-- Custom Scripts -->
     <style>
+        /* Custom Container Width for Large Screens */
+        @media (min-width: 1400px) {
+            .container {
+                max-width: 1140px;
+                /* Reduced from default 1320px to prevent "broadness" */
+            }
+        }
+
+        /* Enhanced Glass Button Styling */
+        .glass-premium {
+            background: linear-gradient(145deg, rgba(255, 255, 255, 0.95) 0%, rgba(240, 240, 250, 0.85) 100%);
+            border: 1px solid rgba(255, 255, 255, 0.8);
+            box-shadow: 0 10px 30px -10px rgba(0, 0, 0, 0.08),
+                inset 0 0 0 1px rgba(255, 255, 255, 0.5);
+        }
+
+        /* Remove the cheap-looking colored top borders and replace with subtle indicators */
+        .glass-premium.border-top {
+            border-top: none !important;
+            border-left: 4px solid var(--bs-primary);
+        }
+
+        .dropdown-item {
+            cursor: pointer;
+        }
+
         /* Reveal Animation Styles */
         .reveal {
             opacity: 0;
@@ -823,11 +854,11 @@
                 solution_automation_point1: "Automated pattern detection",
                 solution_automation_point2: "Cross-reference multiple data sources",
                 solution_automation_point3: "Impact tracking & forecasting",
-                solution_multitenant_title: "The Anderson Multiverse",
+                solution_multitenant_title: "The Enterprise Hub",
                 solution_multitenant_desc: "Experience adaptive multi-tenancy. Four distinct industries—Government, Infrastructure, Tech, and Research—running on a single instance.",
                 solution_multitenant_point1: "Zero code changes for new tenants",
                 solution_multitenant_point2: "Desgoffe, Whitman, Liberty & Hennessey",
-                solution_multitenant_point3: "Launch Live Demos",
+                solution_multitenant_point3: "Launch the Ecosystem",
                 solution_routing_title: "Intelligent Routing",
                 solution_routing_desc: "GERDA AI scores cases by complexity and financial impact, then assigns them to the right agent based on expertise and capacity.",
                 solution_routing_point1: "ML-powered priority scoring",
@@ -856,7 +887,7 @@
                 how_title: "One Core.",
                 how_title_2: "Infinite Skins.",
                 voices_title: "Voices of the",
-                voices_title_2: "Multiverse",
+                voices_title_2: "Ecosystem",
                 voices_subtitle: "Trusted by leaders across every dimension.",
                 test_desgoffe_name: "Bourgmestre Gustave",
                 test_desgoffe_title: "Ville de Desgoffe",
@@ -867,6 +898,65 @@
                 test_hennessey_name: "Eleanor Oseary",
                 test_hennessey_title: "Fonds Hennessey",
                 test_hennessey_quote: "\"Managing grants requires precision. The AI compliance checker saves my team hours every single day.\""
+            },
+            nl: {
+                nav_features: "Functies",
+                nav_solutions: "Oplossingen",
+                nav_docs: "Documentatie",
+                badge_new: "Nieuw",
+                hero_intro: "Introductie",
+                hero_title_1: "Orkestreer Uw",
+                hero_title_2: "Digitale Imperium",
+                hero_desc_1: "Stop met verdrinken in chaos. Verenig support, projecten en autonome intelligentie in één",
+                hero_desc_2: "premium, intelligent besturingssysteem",
+                hero_desc_3: "voor uw bedrijf.",
+                // ... (Adding minimum missing translations as placeholders if needed, but keeping existing structure preferred)
+                features_title_1: "Gebouwd voor",
+                features_title_2: "Moderne Teams",
+                features_subtitle: "Alles wat u nodig heeft om sneller te leveren en georganiseerd te blijven.",
+                feature_ai_title: "AI Autopiloot",
+                feature_ai_desc: "GERDA AI categoriseert tickets automatisch, wijst prioriteit toe en stelt zelfs antwoorden op basis van uw kennisbank.",
+                feature_workflow_title: "Workflow Engine",
+                feature_workflow_desc: "Visuele drag-and-drop workflow bouwer. Verbind tickets aan git commits, deployments en goedkeuringen van klanten.",
+                feature_security_title: "IJzersterke Beveiliging",
+                feature_security_desc: "Role-based access control (RBAC), audit logs en self-hosted deployment opties houden uw data soeverein.",
+                how_title: "Eén Kern.",
+                how_title_2: "Oneindige Skins.",
+                voices_title: "Stemmen uit het",
+                voices_title_2: "Ecosysteem",
+                voices_subtitle: "Vertrouwd door leiders in elke dimensie.",
+                solution_multitenant_title: "De Enterprise Hub",
+                solution_multitenant_desc: "Ervaar adaptieve multi-tenancy. Vier verschillende industrieën—Overheid, Infrastructuur, Tech en Onderzoek—draaiend op één enkele instantie.",
+                solution_multitenant_point3: "Start het Ecosysteem"
+            },
+            fr: {
+                nav_features: "Fonctionnalités",
+                nav_solutions: "Solutions",
+                nav_docs: "Documentation",
+                badge_new: "Nouveau",
+                hero_intro: "Présentation",
+                hero_title_1: "Orchestrez Votre",
+                hero_title_2: "Empire Numérique",
+                hero_desc_1: "Arrêtez de vous noyer dans le chaos. Unifiez le support, les projets et l'intelligence autonome en un seul",
+                hero_desc_2: "système d'exploitation intelligent et premium",
+                hero_desc_3: "pour votre entreprise.",
+                features_title_1: "Conçu pour",
+                features_title_2: "Équipes Modernes",
+                features_subtitle: "Tout ce dont vous avez besoin pour expédier plus rapidement et rester organisé.",
+                feature_ai_title: "Autopilote IA",
+                feature_ai_desc: "GERDA AI catégorise automatiquement les tickets, attribue des priorités et rédige même des réponses basées sur votre base de connaissances.",
+                feature_workflow_title: "Moteur de Workflow",
+                feature_workflow_desc: "Constructeur de workflow visuel par glisser-déposer. Connectez les tickets aux commits git, aux déploiements et aux approbations des clients.",
+                feature_security_title: "Sécurité Renforcée",
+                feature_security_desc: "Contrôle d'accès basé sur les rôles (RBAC), journaux d'audit et options de déploiement auto-hébergé pour garder vos données souveraines.",
+                how_title: "Un Noyau.",
+                how_title_2: "Skins Infinis.",
+                voices_title: "Voix de",
+                voices_title_2: "l'Écosystème",
+                voices_subtitle: "Approuvé par des leaders dans chaque dimension.",
+                solution_multitenant_title: "Le Hub d'Entreprise",
+                solution_multitenant_desc: "Découvrez la multi-location adaptative. Quatre industries distinctes—Gouvernement, Infrastructure, Tech et Recherche—fonctionnant sur une seule instance.",
+                solution_multitenant_point3: "Lancer l'Écosystème"
             }
         };
 
@@ -880,7 +970,13 @@
                     el.innerText = i18n[lang][key];
                 }
             });
-            document.getElementById('current-lang').innerText = lang.toUpperCase();
+
+            const langLabel = lang.toUpperCase();
+            const desktopLang = document.getElementById('current-lang');
+            const mobileLang = document.getElementById('current-lang-mobile');
+
+            if (desktopLang) desktopLang.innerText = langLabel;
+            if (mobileLang) mobileLang.innerText = langLabel;
         }
 
         // Initialize with default
