--- a/tenants/whitman/client/index.html
+++ b/tenants/whitman/client/index.html
@@ -1,144 +1,177 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="nl" data-theme="whitman">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Meldpunt Spoor - Whitman Spoor</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="manifest" href="manifest.json">
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <!-- Main Style Bundle (Vite) -->
+    <script type="module" src="../../../src/main.js"></script>
 </head>
 
-<body>
-    <div class="container">
-        <header class="header">
-            <img src="../whitman.png" alt="Whitman Spoor" class="logo" loading="lazy">
-            <h1 class="main-title">MELDPUNT SPOOR</h1>
-            <p class="subtitle">VEILIGHEID • SNELHEID • BETROUWBAARHEID</p>
+<body class="bg-canvas text-gray-900 min-h-screen flex flex-col font-body antialiased selection:bg-warning selection:text-black">
+    <div class="container mx-auto px-4 max-w-5xl py-6 flex-grow">
+        
+        <header class="flex flex-col md:flex-row items-center border-b-4 border-primary pb-6 mb-8 gap-6 animate-float">
+            <img src="../whitman.png" alt="Whitman Spoor" class="h-16 w-auto" loading="lazy">
+            <div class="text-center md:text-left">
+                <h1 class="text-4xl md:text-5xl font-heading font-bold text-primary tracking-tighter uppercase mb-1">MELDPUNT SPOOR</h1>
+                <p class="text-sm font-bold tracking-[0.2em] bg-primary text-white px-2 py-1 inline-block">VEILIGHEID • SNELHEID • BETROUWBAARHEID</p>
+            </div>
         </header>
 
-        <main class="main-content">
-            <div class="alert-banner">
-                <i class="fas fa-exclamation-triangle"></i>
-                <strong>NOODGEVAL?</strong> Bel direct: <a href="tel:+3225550200">+32 2 555 02 00</a>
+        <main class="w-full space-y-8">
+            <!-- Alert Banner -->
+            <div class="bg-warning text-black p-4 font-bold border-2 border-black flex items-center justify-between shadow-[4px_4px_0px_0px_rgba(0,0,0,1)]">
+                <div class="flex items-center gap-3">
+                    <i class="fas fa-exclamation-triangle text-2xl animate-pulse"></i>
+                    <span class="text-lg">NOODGEVAL?</span>
+                </div>
+                <a href="tel:+3225550200" class="bg-black text-warning px-4 py-2 hover:bg-white hover:text-black transition-colors uppercase tracking-wider">
+                     Bel +32 2 555 02 00
+                </a>
             </div>
 
-            <form id="reportForm" class="report-form">
+            <form id="reportForm" class="bg-white border-2 border-gray-400 p-6 md:p-8 space-y-8 shadow-lg">
                 <!-- Type Selection -->
-                <div class="form-section">
-                    <label class="section-label">TYPE INTERVENTIE</label>
-                    <div class="button-grid">
-                        <button type="button" class="option-btn" data-type="DEFECT">
-                            <i class="fas fa-wrench"></i>
-                            <span>DEFECTE WISSEL</span>
+                <div class="space-y-4">
+                    <label class="block text-lg font-heading font-bold text-primary uppercase border-l-4 border-warning pl-3">TYPE INTERVENTIE</label>
+                    <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+                        <button type="button" class="option-btn flex flex-col items-center justify-center p-4 border-2 border-gray-300 hover:border-primary hover:bg-gray-50 transition-all group active:bg-primary active:text-white" data-type="DEFECT">
+                            <i class="fas fa-wrench text-3xl mb-3 text-gray-400 group-hover:text-primary group-active:text-white"></i>
+                            <span class="font-bold text-sm tracking-wide">DEFECTE WISSEL</span>
                         </button>
-                        <button type="button" class="option-btn" data-type="HAZARD">
-                            <i class="fas fa-warning"></i>
-                            <span>GEVAAR</span>
+                        <button type="button" class="option-btn flex flex-col items-center justify-center p-4 border-2 border-gray-300 hover:border-primary hover:bg-gray-50 transition-all group active:bg-primary active:text-white" data-type="HAZARD">
+                            <i class="fas fa-warning text-3xl mb-3 text-gray-400 group-hover:text-warning group-active:text-white"></i>
+                            <span class="font-bold text-sm tracking-wide">GEVAAR</span>
                         </button>
-                        <button type="button" class="option-btn" data-type="MAINTENANCE">
-                            <i class="fas fa-tools"></i>
-                            <span>ONDERHOUD</span>
+                        <button type="button" class="option-btn flex flex-col items-center justify-center p-4 border-2 border-gray-300 hover:border-primary hover:bg-gray-50 transition-all group active:bg-primary active:text-white" data-type="MAINTENANCE">
+                            <i class="fas fa-tools text-3xl mb-3 text-gray-400 group-hover:text-primary group-active:text-white"></i>
+                            <span class="font-bold text-sm tracking-wide">ONDERHOUD</span>
                         </button>
-                        <button type="button" class="option-btn" data-type="OTHER">
-                            <i class="fas fa-ellipsis-h"></i>
-                            <span>ANDERE</span>
+                        <button type="button" class="option-btn flex flex-col items-center justify-center p-4 border-2 border-gray-300 hover:border-primary hover:bg-gray-50 transition-all group active:bg-primary active:text-white" data-type="OTHER">
+                            <i class="fas fa-ellipsis-h text-3xl mb-3 text-gray-400 group-hover:text-primary group-active:text-white"></i>
+                            <span class="font-bold text-sm tracking-wide">ANDERE</span>
                         </button>
                     </div>
                     <input type="hidden" id="interventionType" name="interventionType" required>
                 </div>
 
                 <!-- Location -->
-                <div class="form-section">
-                    <label class="section-label">LOCATIE</label>
-                    <div class="location-group">
+                <div class="space-y-4">
+                    <label class="block text-lg font-heading font-bold text-primary uppercase border-l-4 border-warning pl-3">LOCATIE</label>
+                    <div class="flex gap-2">
                         <input type="text" id="location" name="location" placeholder="Bijv: Schaarbeek Station, Spoor 3"
-                            required>
-                        <button type="button" id="getLocationBtn" class="icon-btn">
-                            <i class="fas fa-crosshairs"></i>
-                            <span>MIJN LOCATIE</span>
+                            required
+                            class="flex-grow p-4 bg-gray-100 border-2 border-gray-300 focus:border-primary focus:bg-white outline-none font-mono text-sm placeholder-gray-500 uppercase">
+                        <button type="button" id="getLocationBtn" class="bg-gray-200 border-2 border-gray-300 px-6 hover:bg-gray-300 hover:border-gray-400 transition-colors text-primary font-bold">
+                            <i class="fas fa-crosshairs block text-xl mb-1"></i>
+                            <span class="text-[10px] block">GPS</span>
                         </button>
                     </div>
-                    <div id="locationStatus" class="location-status"></div>
+                    <div id="locationStatus" class="font-mono text-xs text-primary"></div>
                     <input type="hidden" id="latitude" name="latitude">
                     <input type="hidden" id="longitude" name="longitude">
                 </div>
 
                 <!-- Photo Upload -->
-                <div class="form-section">
-                    <label class="section-label">FOTO</label>
-                    <div class="photo-upload">
-                        <input type="file" id="photo" name="photo" accept="image/*" capture="environment">
-                        <label for="photo" class="photo-btn">
-                            <i class="fas fa-camera"></i>
-                            <span id="photoLabel">FOTO NEMEN</span>
+                <div class="space-y-4">
+                    <label class="block text-lg font-heading font-bold text-primary uppercase border-l-4 border-warning pl-3">FOTO</label>
+                    <div class="relative items-center justify-center w-full">
+                        <input type="file" id="photo" name="photo" accept="image/*" capture="environment" class="absolute inset-0 w-full h-full opacity-0 cursor-pointer z-10">
+                        <label for="photo" class="flex flex-col items-center justify-center h-32 border-2 border-dashed border-gray-400 bg-gray-50 hover:bg-gray-100 hover:border-primary transition-colors cursor-pointer">
+                            <i class="fas fa-camera text-3xl text-gray-400 mb-2"></i>
+                            <span id="photoLabel" class="font-bold text-gray-500 uppercase tracking-widest">FOTO NEMEN / UPLOADEN</span>
                         </label>
-                        <div id="photoPreview" class="photo-preview"></div>
+                        <div id="photoPreview" class="hidden mt-4 w-full h-48 bg-gray-200 border-2 border-gray-400 bg-cover bg-center"></div>
                     </div>
                 </div>
 
                 <!-- Description -->
-                <div class="form-section">
-                    <label class="section-label" for="description">BESCHRIJVING</label>
+                <div class="space-y-4">
+                    <label class="block text-lg font-heading font-bold text-primary uppercase border-l-4 border-warning pl-3" for="description">BESCHRIJVING</label>
                     <textarea id="description" name="description" rows="4" required
-                        placeholder="Beschrijf het probleem kort en duidelijk..."></textarea>
+                        placeholder="Beschrijf het probleem kort en duidelijk..."
+                        class="w-full p-4 bg-gray-100 border-2 border-gray-300 focus:border-primary focus:bg-white outline-none font-mono text-sm placeholder-gray-500"></textarea>
                 </div>
 
                 <!-- Priority -->
-                <div class="form-section">
-                    <label class="section-label">URGENTIE</label>
-                    <div class="priority-buttons">
-                        <button type="button" class="priority-btn" data-priority="5">
-                            <i class="fas fa-circle"></i>
-                            <span>NORMAAL</span>
+                <div class="space-y-4">
+                    <label class="block text-lg font-heading font-bold text-primary uppercase border-l-4 border-warning pl-3">URGENTIE</label>
+                    <div class="grid grid-cols-3 gap-4">
+                        <button type="button" class="priority-btn p-3 border-2 border-blue-200 bg-blue-50 text-blue-800 hover:bg-blue-100 font-bold uppercase tracking-wider text-sm flex items-center justify-center gap-2" data-priority="5">
+                            <i class="fas fa-circle text-xs"></i> NORMAAL
                         </button>
-                        <button type="button" class="priority-btn" data-priority="10">
-                            <i class="fas fa-exclamation-circle"></i>
-                            <span>URGENT</span>
+                        <button type="button" class="priority-btn p-3 border-2 border-orange-200 bg-orange-50 text-orange-800 hover:bg-orange-100 font-bold uppercase tracking-wider text-sm flex items-center justify-center gap-2" data-priority="10">
+                            <i class="fas fa-exclamation-circle"></i> URGENT
                         </button>
-                        <button type="button" class="priority-btn priority-critical" data-priority="15">
-                            <i class="fas fa-exclamation-triangle"></i>
-                            <span>KRITIEK</span>
+                        <button type="button" class="priority-btn p-3 border-2 border-red-500 bg-red-50 text-red-700 hover:bg-red-100 hover:text-white hover:bg-red-600 font-bold uppercase tracking-wider text-sm flex items-center justify-center gap-2 animate-pulse" data-priority="15">
+                            <i class="fas fa-exclamation-triangle"></i> KRITIEK
                         </button>
                     </div>
                     <input type="hidden" id="priority" name="priority" value="5" required>
                 </div>
 
                 <!-- Contact Info -->
-                <div class="form-section">
-                    <label class="section-label">UW GEGEVENS</label>
-                    <input type="text" id="reporterName" name="reporterName" placeholder="Naam" required>
-                    <input type="email" id="reporterEmail" name="reporterEmail" placeholder="E-mail" required>
-                    <input type="tel" id="reporterPhone" name="reporterPhone" placeholder="Telefoon (optioneel)">
+                <div class="space-y-4">
+                    <label class="block text-lg font-heading font-bold text-primary uppercase border-l-4 border-warning pl-3">UW GEGEVENS</label>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                        <input type="text" id="reporterName" name="reporterName" placeholder="NAAM" required
+                            class="p-3 bg-gray-100 border-2 border-gray-300 focus:border-primary outline-none font-bold uppercase">
+                        <input type="email" id="reporterEmail" name="reporterEmail" placeholder="E-MAIL" required
+                            class="p-3 bg-gray-100 border-2 border-gray-300 focus:border-primary outline-none font-bold uppercase">
+                        <input type="tel" id="reporterPhone" name="reporterPhone" placeholder="TELEFOON (OPTIONEEL)"
+                            class="p-3 bg-gray-100 border-2 border-gray-300 focus:border-primary outline-none font-bold uppercase md:col-span-2">
+                    </div>
                 </div>
 
                 <!-- Submit -->
-                <div class="form-section">
-                    <button type="submit" class="submit-btn">
+                <div class="pt-6 border-t-2 border-gray-200">
+                    <button type="submit" class="w-full bg-primary text-white font-heading font-bold text-xl py-4 hover:bg-blue-900 transition-colors uppercase tracking-widest shadow-lg flex items-center justify-center gap-3">
                         <i class="fas fa-paper-plane"></i>
-                        <span>MELDING VERZENDEN</span>
+                        MELDING VERZENDEN
                     </button>
                 </div>
             </form>
 
-            <div id="loadingOverlay" class="loading-overlay" style="display: none;">
-                <div class="spinner"></div>
-                <p>VERZENDEN...</p>
+            <div id="loadingOverlay" class="fixed inset-0 bg-white/90 z-50 flex flex-col items-center justify-center space-y-6" style="display: none;">
+                <div class="w-20 h-20 border-8 border-gray-200 border-t-primary rounded-full animate-spin"></div>
+                <p class="text-2xl font-heading font-bold text-primary uppercase tracking-widest animate-pulse">VERZENDEN...</p>
             </div>
         </main>
 
-        <footer class="footer">
-            <p>WHITMAN SPOOR NV © 2025</p>
-            <p>24/7 NOODLIJN: +32 2 555 02 00</p>
+        <footer class="mt-12 py-6 border-t-4 border-gray-300 text-center font-mono text-xs text-gray-500">
+            <p class="mb-2">WHITMAN SPOOR NV © 2025</p>
+            <p class="font-bold text-primary">24/7 NOODLIJN: +32 2 555 02 00</p>
         </footer>
     </div>
 
     <script src="script.js"></script>
+    <style>
+        /* Custom override for active state handling within Tailwind logic */
+        .option-btn.selected {
+            @apply border-primary bg-blue-50 text-primary;
+        }
+        /* Since we can't use @apply in style tags without PostCSS processing here, 
+           we rely on JS toggling classes or simple inline styles for the active state logic 
+           if the script.js handles it via classList. 
+           Assuming script.js toggles 'active' or 'selected'. */
+        .option-btn.active {
+            border-color: var(--color-primary);
+            background-color: #eff6ff;
+            color: var(--color-primary);
+        }
+        .option-btn.active i {
+            color: var(--color-primary);
+        }
+    </style>
 </body>
 
 </html>
