--- a/tenants/site/demos.html
+++ b/tenants/site/demos.html
@@ -23,9 +23,7 @@
         <div class="container mx-auto px-6 py-4">
             <div class="flex items-center justify-between">
                 <a href="../../index.html" class="flex items-center gap-3 group">
-                    <div class="w-10 h-10 bg-gradient-to-br from-indigo-500 to-purple-600 rounded-lg flex items-center justify-center shadow-lg group-hover:shadow-indigo-500/50 transition-all duration-300">
-                        <i class="fas fa-layer-group text-white text-lg"></i>
-                    </div>
+                    <img src="../../images/logo.png" alt="Ticket Masala" class="w-10 h-10 rounded-lg shadow-lg group-hover:shadow-indigo-500/50 transition-all duration-300">
                     <span class="text-xl font-bold tracking-tight">Ticket Masala</span>
                 </a>
                 <a href="https://github.com/your-repo/ticket-masala" target="_blank" class="text-gray-400 hover:text-white transition-colors">
